Cert-manager/openshift/ingress/keycloak-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: keycloak
  annotations:
    cert-manager.io/issuer: acme-issuer-production
    acme.cert-manager.io/http01-edit-in-place: "true"
  name: keycloak-ingres
  namespace: bramterlouw-dev
spec:
  rules:
    - host: example-keycloak-bramterlouw-dev.apps.ocp2-inholland.joran-bergfeld.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: example-keycloak-service
                port:
                  number: 8888
  tls:
    - hosts:
        - example-keycloak-bramterlouw-dev.apps.ocp2-inholland.joran-bergfeld.com
      secretName: keycloak-ingres-cert
